@@ -7,9 +7,6 @@ bundler_args: --without local_development
 script: bundle exec rake
 
 rvm:
-  - 1.8.7
-  - 1.9.2
-  - 1.9.3
   - 2.0.0
   - 2.1.10
   - 2.2.6
